2003-08-29  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgstclockentry.c: New file.
	* src/rbgst.c: Initializes Gst::ClockEntry.
	* src/rbgst.h: Added macros for Gst::ClockEntry + fixed a critical bug
	  in ULL conversion.
	* src/rbgstclock.c: Added a lot of methods + some constants.
	  Class is now finished.
	* src/rbgsteventsize.c: Fixed typos in a comment (for API reference).
	* tests/misc.rb, tests/tc_clock.rb: Added additional tests for Gst::Clock.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>
                                                                                
	* extconf.rb: Exit with 1 when the package is not found.

2003-08-25  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgst.h, src/rbgstplugin.c, src/rbgstpluginfeature.c: 
	  Introduced is_valid_pluginfeature_type() and 
	  instanciate_pluginfeature().
	* src/rbgstregistry.c: Added a lot of methods + some constants. 
	  Class is now finished.
	* tests/tc_registry.rb: New file.
	* tests/tc_plugin.rb: Moved 'test_registry' in tests/tc_registry.rb.
	* src/rbgstmediainfo.c: Implemented Gst::MediaInfoTrack#con_streams.

2003-08-24  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgstbin.c: Added methods get_by_name_recurse_up, auto_clock,
	  use_clock and on_[pre|post]_iterate.
	* tests/rc_element.rb: Added tests for Gst::Bin#get_by_name* and
	  on_[pre|post]_iterate.

2003-08-23  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgst*.c: Changed extdoc.rb enumeration syntax to something 
	  more RDish (-a, -b, -c to *a, *b, *c).

2003-08-19  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgst*.c: Fixed comments + removed obsolete code.

2003-08-15  Laurent Sansonetti  <laurent@datarescue.be>

	* sample/xml-ogg-player.rb: New file.
	* sample/media-type.rb: Fixed a bug when printing track length (needed 
	  to divide with Gst::Second to have the correct number of seconds).
	* src/rbgstmediainfo.c: Fixed integer conversion bug (now uses ULL).
