@@ -7,11 +7,23 @@ require 'mkmf-gnome2'
 
 pkgname = 'gtkglext-1.0'
 PKGConfig.have_package(pkgname) or exit 1
+check_win32
 
 top = File.expand_path(File.dirname(__FILE__) + '/..') # XXX
 $CFLAGS += " " + ['glib/src', 'gtk/src'].map{|d|
   "-I" + File.join(top, d)
 }.join(" ")
+
+if /cygwin|mingw/ =~ RUBY_PLATFORM
+  top = "../.."
+  [
+    ["glib/src", "ruby-glib2"],
+    ["gtk/src", "ruby-gtk2"],
+  ].each{|d,l|
+    $LDFLAGS << " -L#{top}/#{d}"
+    $libs << " -l#{l}"
+  }
+end
 
 srcdir = File.dirname($0) == "." ? "." :
   File.expand_path(File.dirname($0) + "/src")
