@@ -1,3 +1,7 @@
+2003-09-05  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* extconf.rb: win32 support.
+
 2003-08-28 Vincent Isambart <isambart@netcourrier.com>
 
 	* src/rbgdkwindow.c: Gdk::Window#gl_drawable can now be called
