@@ -1,3 +1,7 @@
+2003-09-05  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* extconf.rb: win32 support.
+
 2003-08-29  Laurent Sansonetti  <laurent@datarescue.be>
 
 	* src/rbgstclockentry.c: New file.
